--- a/10. Ecommerce2.0/server/package.json
+++ b/10. Ecommerce2.0/server/package.json
@@ -10,6 +10,7 @@
   "author": "JorgeMolano",
   "license": "MIT",
   "dependencies": {
+    "express": "^4.18.1",
     "firebase": "^9.8.2",
     "firebase-admin": "^10.2.0",
     "mongoose": "^6.3.4"
