--- a/11. Mocks and Normalization/package.json
+++ b/11. Mocks and Normalization/package.json
@@ -1,24 +1,23 @@
 {
-  "name": "10.-containers-and-dbs",
+  "name": "11.-mocks-and-normalization",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node ./src/index.ts",
-    "dev": "nodemon ./src/index.ts"
+    "start": "nodemon ./src/server.ts"
   },
-  "author": "JorgeMolano",
-  "license": "MIT",
+  "author": "Jorge Molano",
+  "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.40",
+    "@faker-js/faker": "^7.2.0",
+    "@types/express": "^4.17.13",
     "express": "^4.18.1",
-    "firebase": "^9.8.2",
-    "firebase-admin": "^10.2.0",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.16",
+    "normalizr": "^3.6.2",
     "ts-node": "^10.8.1"
   }
 }
